added bootstrap and simplified it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>Hi</h1>
-<h2>{{title}}</h2>
-<app-video-capture></app-video-capture>
+<body>
+    <app-video-capture></app-video-capture>
+</body>
+<footer>
+    <p>Created by Nikhil Sharma</p>
+</footer>
