--- a/src/app/video-capture/video-capture.component.html
+++ b/src/app/video-capture/video-capture.component.html
@@ -1,1 +1,14 @@
-<video #videoElement autoplay></video>
+  <div class="container text-center">
+    <h1 class="mb-5">Real-time User Video Capture</h1>
+  </div>
+  <div class="container text-center">
+    <button class="btn btn-primary mr-2" (click)="stopCapture()" *ngIf="capturing">Stop</button>
+    <button class="btn btn-primary" (click)="startCapture()" *ngIf="!capturing">Start</button>
+  </div>
+  <main>
+    <div class="container text-center center mt-2 col-md-12">
+      <video #videoElement autoplay class="video-element"></video>
+    </div>
+  </main>
+  
+  
